[package]
name = "yard_sale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
uuid = {version = "1.2.2", features = ["serde", "v4"]}
serde = {version = "^1", features = ["derive"]}
env_logger = "0.8"
log = "^0.4"
chrono = "0.4.25"
serde_json = "1.0.96"
sqlx = {version = "0.6.2", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"]}
dotenv = "0.15.0"